add bluetooth script and repairs symlink

--- a/lazygit/.config/lazygit/state.yml
+++ b/lazygit/.config/lazygit/state.yml
@@ -2,6 +2,8 @@ lastupdatecheck: 0
 recentrepos:
 - /home/rithviz/.dotfiles
 - /home/rithviz/.dotfiles/personal
+- /home/rithvij/dotfilesmy/main
+- /home/rithvij/dotfilesmy
 - /media/rithviz/Storage/Projects/Fun/bots/telemirror
 - /home/rithviz/.dotfiles/others/theprimeagen-dotfiles
 - /home/rithviz/.dotfiles/others/dt-dotfiles
